# BacktraderAPI

./: .env  .gitignore  Dockerfile  dependencies.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2045decef909_create_user_table.py  32865c18ede0_add_constraint_user_table.py  5298842033c5_create_strategy_table.py
app/: database.py  dependencies.py  main.py  middleware.py
app/alembic/: env.py
app/alembic/versions/: 5298842033c5_create_strategy_table.py  8cb4f8026735_remove_tag_column_add_inputs_and_params_.py
app/analytics/: __init__.py  vectorbt_service.py
app/auth/: auth_bearer.py  auth_handler.py
app/crud/: strategies.py  users.py
app/database/: session.py
app/models/: __init__.py  strategy.py  user.py
app/routers/: run_strategy.py  strategies.py  users.py
app/schemas/: strategy.py  token.py  user.py
app/utils/: config.py  errors.py
crud/: strategies.py  users.py
models/: strategy.py  user.py
routers/: strategies.py
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
utils/: errors.py
