[tool.poetry]
name = "app"
version = "1"
description = ""
authors = ["Lytton Liao <lytton.liao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.0"
alembic = "^1.13.2"
backtrader = "^1.9.78.123"
vectorbt = "^0.26.2"
crypto = "^1.4.1"
poetry = "^1.8.3"
psycopg2 = "^2.9.9"
pydantic = "^2.8.2"
pyjwt = "^2.9.0"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
uvicorn = "^0.30.5"
yfinance = "^0.2.43"
ruff = "^0.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
